<resources>
    <string name="app_name">DOT SDK Samples</string>
    <string name="navigation_destination_document_auto_capture">Document Auto Capture</string>
    <string name="navigation_destination_face_auto_capture">Face Auto Capture</string>
    <string name="navigation_destination_home">Home</string>
    <string name="navigation_destination_magnifeye_liveness">MagnifEye Liveness</string>
    <string name="navigation_destination_smile_liveness">Smile Liveness</string>
    <string name="sample_document_auto_capture_title">Document Auto Capture</string>
    <string name="sample_document_auto_capture_description">Basic component sample.</string>
    <string name="sample_face_auto_capture_title">Face Auto Capture</string>
    <string name="sample_face_auto_capture_description">Basic component sample.</string>
    <string name="sample_magnifeye_liveness_title">MagnifEye Liveness</string>
    <string name="sample_magnifeye_liveness_description">Basic component sample.</string>
    <string name="sample_magnifeye_liveness_summary">Use the Digital Identity Service in order to evaluate the MagnifEye liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_magnifeye_liveness_check</string>
    <string name="sample_smile_liveness_title">Smile Liveness</string>
    <string name="sample_smile_liveness_description">Basic component sample.</string>
    <string name="sample_smile_liveness_summary">Use the Digital Identity Service in order to evaluate the smile liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_smile_liveness_check</string>
    <string name="sample_start">Start</string>
</resources>
